--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "expo-font": "~11.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
