--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/auth": "^18.4.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@types/react": "^18.2.21",
     "@types/react-native": "^0.72.2",
+    "axios": "^1.5.0",
     "expo": "~49.0.8",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.3.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "typescript": "^5.2.2",
-    "expo-font": "~11.4.0"
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
