--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^10.3.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-vector-icons": "^10.0.0",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
